# timestalker

./: package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: ActivityHistory.svelte  App.svelte  ProjectsList.svelte  TaskTimer.svelte  consts.ts  stores.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  timer.rs
src/assets/: Check.svelte
src/components/: DayHistory.svelte  ProjectItem.svelte
src/containers/: ActivityChart.svelte  ActivityHistory.svelte  DayHistory.svelte  Settings.svelte  TaskTimer.svelte
src/data-service/: time-data-service.ts
src/helpers/: index.ts
src/stores/: activity-history.ts  projects.ts  settings.ts  stores.ts  timer.ts
src/types/: globals.d.ts  locale.d.ts
